--- a/Slovak/main/DownloadProviderUi.apk/res/values-sk/strings.xml
+++ b/Slovak/main/DownloadProviderUi.apk/res/values-sk/strings.xml
@@ -400,4 +400,8 @@ Táto funkcia nie je mimo Čínu odporúčaná"</string>
     <string name="xunlei_speed_service">Xunlei sťahovanie</string>
     <string name="xunlei_switch">Xunlei sťahovanie</string>
     <string name="yesterday">Včera</string>
+    
+<string name="storage_dialog_content">Povoľte stiahnutým súborom prístup k úložisku zariadenia, aby ste mohli používať jeho funkcie.</string>
+     <string name="storage_dialog_go">Nastavenia</string>
+     <string name="storage_dialog_title">Prístup k úložisku zariadenia</string>    
 </resources>
