--- a/Slovak/main/SecurityCenter.apk/res/values-sk/strings.xml
+++ b/Slovak/main/SecurityCenter.apk/res/values-sk/strings.xml
@@ -5698,4 +5698,15 @@ Skúste zväčšiť rozlíšenie!"</string>
      <string name="pc_endurance_calculation">Prebieha výpočet…</string>
      <string name="size_embedded">Paralelné okná</string>
      <string name="size_full">Celá obrazovka</string>    
+     
+<string name="app_name_pad">Optimalizácia</string>
+     <string name="app_name_phone">Optimalizácia</string>
+     <string name="beauty_portrait_center">Vycentrovať tváre</string>
+     <string name="beauty_portrait_center_desc">Automaticky identifikujte a vycentrujte tváre vo videohovoroch a stretnutiach. Túto funkciu niektoré aplikácie nepodporujú.</string>
+<string name="dialog_msg_delete_icon_content_phone">Zabezpečenie vám umožňuje vyčistiť odpadky na vašom zariadení, nájsť a neutralizovať vírusy, šetriť batériu, spravovať povolenia a ďalšie.</string>
+     <string name="dialog_msg_delete_icon_title_phone">Chcete odstrániť túto skratku na ploche?</string>
+     <string name="eletric_no_grant_dialog_message_for_phone">Udeľte požadované povolenia, aby ste mohli identifikovať neznáme čísla.</string>
+     <string name="eletric_no_grant_dialog_negative_button">Zrušiť</string>
+     <string name="eletric_no_grant_dialog_positive_button">Nastavenia</string>
+     <string name="eletric_no_grant_dialog_title">Vyžadujú sa povolenia</string>     
 </resources>
