--- a/Slovak/main/Notes.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Notes.apk/res/values-sk/strings.xml
@@ -658,4 +658,7 @@ http://www.miuios.cz/rom
     <string name="widget_take_notes_title">Poznámky</string>
     <string name="widget_under_privacy_mode">Režim Súkromie, nie je možné zobraziť obsah poznámky</string>
     <string name="yesterday">Včera</string>
+    
+    <string name="pc_all_folder_name">Všetko</string>
+    
 </resources>
