--- a/Slovak/main/MiuiHome.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiHome.apk/res/values-sk/strings.xml
@@ -772,4 +772,9 @@
     <string name="widget_quick_function">Skratky</string>
     <string name="widgets_preview_title">Pridať widget</string>
     <string name="yesterday">Včera</string>   
+	
+    <string name="menu_only_widget_no_word">Odstrániť názvy widgetov</string>
+    <string name="open_personal_assistant_settings_off">Vypnuté</string>
+    <string name="open_personal_assistant_settings_on">Zapnuté</string>
+    <string name="open_personal_assistant_settings_simplified">Asistent</string>	
 </resources>
