--- a/Slovak/main/SoundRecorder.apk/res/values-sk/strings.xml
+++ b/Slovak/main/SoundRecorder.apk/res/values-sk/strings.xml
@@ -263,7 +263,7 @@ Klepnite na \"%1$s\" a potom vyberte \"%2$s\"."</string>
     <string name="saturday_short">Sob</string>
     <string name="saturday_shortest">S</string>
     <string name="save_as">Uložiť ako</string>
-    <string name="save_record_dialog_title">Uložiť nahrávky</string>
+    <string name="save_record_dialog_title">Uložiť nahrávku</string>
     <string name="search_app">Záznamník</string>
     <string name="search_empty">Nič sa nenašlo</string>
     <string name="search_enable_earpiece_title">Použiť prijímač na prehranie zvuku</string>
@@ -344,4 +344,8 @@ Klepnite na \"%1$s\" a potom vyberte \"%2$s\"."</string>
  Dotknite sa %s pre spustenie sťahovania po pripojení na Wi-Fi sieť."</string>
     <string name="wifi_recommended_title">Upozornenie na spotrebu dát</string>
     <string name="yesterday">Včera</string>
+	
+    <string name="tab_all">Všetko</string>
+    <string name="tab_apps">Aplikácie</string>
+    <string name="tab_call">Hovory</string>	
 </resources>
