--- a/Slovak/main/SoundRecorder.apk/res/values-sk/strings.xml
+++ b/Slovak/main/SoundRecorder.apk/res/values-sk/strings.xml
@@ -348,4 +348,62 @@ Klepnite na \"%1$s\" a potom vyberte \"%2$s\"."</string>
     <string name="tab_all">Všetko</string>
     <string name="tab_apps">Aplikácie</string>
     <string name="tab_call">Hovory</string>	
+	
+	
+<string name="add_remark_hint">Zadajte poznámku</string>
+     <string name="add_remark_tip">Klepnutím pridáte poznámku</string>
+     <string name="alert_message_delete_local_record">Odstrániť túto nahrávku?</string>
+     <string name="allowed">Povolené</string>
+     <string name="character_counter_content_description">Znaky %1$d z %2$d</string>
+     <string name="character_counter_overflowed_content_description">Prekročili ste limit počtu znakov %1$d z %2$d</string>
+     <string name="clear_text_end_icon_content_description">Vymazať text</string>
+     <string name="copy">Kopírovať</string>
+     <string name="empty_tips">Tlačidlom spustíte nahrávanie</string>
+     <string name="error_icon_content_description">Chyba</string>
+     <string name="error_remark_too_long">Vaša poznámka je príliš dlhá</string>
+     <string name="expand_button_title">Rozšírené</string>
+     <string name="exposed_dropdown_menu_content_description">Zobraziť rozbaľovaciu ponuku</string>
+     <string name="icon_content_description">Ikona dialógového okna</string>
+     <string name="item_view_role_description">Karta</string>
+     <string name="lyric_item_point_count">%1$d až %2$d</string>
+     <string name="menu">Ponuka</string>
+     <string name="miuix_appcompat_cloud_state_disabled">Synchronizácia s cloudom je vypnutá</string>
+     <string name="miuix_appcompat_cloud_state_finished">Úspešne synchronizované s cloudom</string>
+     <string name="miuix_appcompat_cloud_state_synncing">Synchronizuje sa s cloudom…</string>
+     <string name="network_tip_dialog_cancel">Nesúhlasím</string>
+     <string name="network_tip_dialog_content">Záznamník sa musí pripojiť k internetu, aby mohol normálne fungovať. Súhlasíte?</string>
+     <string name="network_tip_dialog_ok">Súhlasím</string>
+     <string name="network_tip_dialog_title">Vyžaduje sa internetové pripojenie</string>
+     <string name="network_unavailable_tip">Pripojte sa k sieti a skúste to znova.</string>
+     <string name="no_records">Zatiaľ tu nie sú žiadne nahrávky</string>
+     <string name="not_allowed">Neudelené</string>
+     <string name="not_set">Nenastavené</string>
+     <string name="permission_desc">Podrobnosti o povoleniach</string>
+     <string name="permission_dialog_cancel">Zrušiť</string>
+     <string name="permission_dialog_ok">Nastavenia</string>
+     <string name="permission_record">Nahrať zvuk</string>
+     <string name="permission_record_description">Za poskytovanie služieb nahrávania zvuku</string>
+     <string name="permission_storage">Prístup k úložisku</string>
+     <string name="permission_storage_description">Na správu nahrávok a ich sťahovanie z cloudu</string>
+     <string name="permission_storage_description_for_download">Na sťahovanie nahrávok z cloudu</string>
+     <string name="permission_storage_description_for_manage_files">Na správu nahrávok</string>
+     <string name="preference_copied">\"%1$s\" bolo skopírované do schránky.</string>
+     <string name="preference_recog_terms">Zmluvné podmienky</string>
+     <string name="record_item_title_multi_choice">Vybrať</string>
+     <string name="record_item_title_remark">Pridať poznámku</string>
+     <string name="record_item_title_send">Zdieľať</string>
+     <string name="record_list_item_recognize_text">Text</string>
+     <string name="record_permission_dialog_title">Vyžadujú sa povolenia pre mikrofón</string>
+     <string name="record_resotre">Obnoviť nahrávky</string>
+     <string name="reg_error_audio_exist">Tento súbor už existuje.</string>
+     <string name="reg_error_audio_large">Zvukové súbory nemôžu byť väčšie ako 500 MB.</string>
+     <string name="reg_error_audio_short">Zvukový súbor je príliš malý.</string>
+     <string name="reg_error_business">Súbor sa nepodarilo prepísať. Skúste to znova.</string>
+     <string name="reg_error_client">Vyskytla sa chyba údajov aplikácie. Skúste to znova.</string>
+     <string name="reg_error_price">Vyskytla sa chyba odhadu nákladov. Skúste to znova.</string>
+     <string name="reg_error_server">Vyskytla sa chyba servera. Skúste to znova.</string>
+     <string name="reg_error_upload_audio">Súbor sa nepodarilo nahrať, skúste to znova.</string>
+     <string name="reg_error_upload_order">Nepodarilo sa nahrať, skúste to znova.</string>
+     <string name="storage_permission_dialog_title">Vyžadujú sa povolenia pre úložisko</string>	 
+	 
 </resources>
