--- a/Slovak/main/MiService.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiService.apk/res/values-sk/strings.xml
@@ -196,4 +196,6 @@
     <string name="wednesday_short">Str</string>
     <string name="wednesday_shortest">S</string>
     <string name="yesterday">Včera</string>
+	
+    <string name="mi_service_back">Späť</string>	
 </resources>
