--- a/Slovak/main/Settings.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Settings.apk/res/values-sk/strings.xml
@@ -7738,4 +7738,18 @@ Nastavenie telefónu môže vyžadovať prenos významného množstva dát."</st
      <string name="bt_always_show_icon">Vždy zobrazovať ikonu bluetooth v stavovom riadku</string>  
 
 <string name="emulate_sd_data">Emulované dáta karty SD</string>	 
+
+    <string name="var_font_switch_dialog_summary">Pre použitie týchto zmien, je nutné reštartovať vaše zariadenie.</string>
+    <string name="var_font_switch_dialog_title">Reštartovať zariadenie?</string>
+	
+<string name="bt_low_energy_audio_summary">Vychutnajte si vysokokvalitný zvuk s nízkou spotrebou energie a zníženou latenciou</string>
+     <string name="bt_low_energy_audio_title">Bluetooth LE Audio</string>
+     <string name="miheadset_ancMode">Režim potlačenia hluku</string>
+     <string name="miheadset_atuo_download_title">Stiahnuť automaticky</string>
+<string name="miheadset_auto_download_summary">Automaticky sťahovať najvhodnejšie verzie</string>
+     <string name="miheadset_automatic">Automaticky</string>
+     <string name="miheadset_manual_operation">Manuálne</string>
+     <string name="miui_type_style_summary">Štýl písania použitý pri zapnutej čítačke obrazovky</string>
+     <string name="miui_type_style_title">Štýl písania</string>
+     <string name="stylus_not_connect_message_new">Pripojte stylus na spárovanie</string>
 </resources>
