--- a/Slovak/main/PersonalAssistant.apk/res/values-sk/strings.xml
+++ b/Slovak/main/PersonalAssistant.apk/res/values-sk/strings.xml
@@ -1053,4 +1053,7 @@ na zobrazenie widgetov."</string>
     <string name="xspace_resolver_activity_title">vyberte aplikáciu</string>
     <string name="year_month_day_all_format_en">MM.dd.yyyy HH:mm:ss</string>
     <string name="yesterday">Včera</string>
+	
+    <string name="pa_picker_search_card_filter_button_text">Všetky widgety</string>
+    <string name="pa_setting_perm_empty">Zatiaľ prázdne</string>	
 </resources>
