--- a/Slovak/main/AuthManager.apk/res/values-sk/strings.xml
+++ b/Slovak/main/AuthManager.apk/res/values-sk/strings.xml
@@ -556,4 +556,7 @@
     
 <string name="perm_educate_post_notification">Upozornenia môžu sprevádzať zvuk a vibrácie, ktoré sa zobrazujú na paneli upozornení a na ikonách na ploche. Predvoľby upozornení môžete zmeniť v Nastaveniach.</string>
      <string name="permdesc_post_notification">Povoliť aplikácii %1$s upozornenia?</string>    
+	 
+<string name="carwith_grant_permission_tips_when_lock">Najskôr odomknite telefón</string>
+     <string name="permdesc_read_phone_numbers">Povoliť aplikácii %1$s čítať telefónne čísla na tomto zariadení?</string>	 
 </resources>
