--- a/Slovak/main/PackageInstaller.apk/res/values-sk/strings.xml
+++ b/Slovak/main/PackageInstaller.apk/res/values-sk/strings.xml
@@ -612,4 +612,6 @@ Všetky predchádzajúce používateľské údaje budú uložené."</string>
     <string name="wifi_verbose_logging">Enable Wi‑Fi Verbose Logging</string>
     <string name="wifi_verbose_logging_summary">Increase Wi‑Fi logging level, show per SSID RSSI in Wi‑Fi Picker</string>
     <string name="window_animation_scale_title">Window animation scale</string>
+	
+<string name="after_install_to_delete">Po inštalácii vymazať apk súbor</string>
 </resources>
