--- a/Slovak/main/MiuiContentCatcher.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiContentCatcher.apk/res/values-sk/strings.xml
@@ -35,4 +35,6 @@
 Vymazať heslo?</string>
     <string name="settings_clear_data_confirmation_title">Vymazanie hesiel</string>
     <string name="using_miui_autofill_message">Pre zadanie hesiel automaticky, MIUI uloží informácie o vašom účte a heslo do vášho zariadenia.</string>
+	
+    <string name="back_button_label">Späť</string>	
 </resources>
