--- a/Slovak/main/Notes.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Notes.apk/res/values-sk/strings.xml
@@ -666,5 +666,10 @@ http://www.miuios.cz/rom
      <string name="widget_all_todo_name">Všetky úlohy</string>
      <string name="widget_click_check">Zobrazíte klepnutím</string>
          
-    
+<string name="access_photos_and_videos">Prístup k fotografiám a videám</string>
+     <string name="permission_photos_desc">Na pridávanie obrázkov do poznámok</string>
+     <string name="permission_photos_desc_pad">Na pridávanie obrázkov do poznámok</string>
+     <string name="send_notifications_for_reminder">Na odosielanie pripomienok</string>
+     <string name="toast_refuse_to_use_photos_in_excerpt">Povoľte tejto aplikácii prístup k fotkám, aby ste mohli pridávať obrázky do poznámok</string>
+	 
 </resources>
