--- a/Slovak/main/DeskClock.apk/res/values-sk/strings.xml
+++ b/Slovak/main/DeskClock.apk/res/values-sk/strings.xml
@@ -577,4 +577,8 @@
     <string name="xiaomi_deskclock_uninstall_description_title">Odinštalovať Hodiny?</string>
     <string name="yesterday">Včera</string>
     <string name="your_sounds">Moje zvuky</string>
+	
+    <string name="alarm_alert_now">%s budík</string>
+    <string name="alarm_alert_snooze_button">Odložiť</string>
+    <string name="click_to_cancel_alarm">Dotykom zrušíte</string>	
 </resources>
