--- a/Slovak/main/TeleService.apk/res/values-sk/strings.xml
+++ b/Slovak/main/TeleService.apk/res/values-sk/strings.xml
@@ -1342,57 +1342,87 @@ Počet zostávajúcich pokusov: %d."</string>
     <string name="preference_telocation_summary_teloc_off">Skryť polohu kontaktu</string>
     <string name="preference_telocation_summary_teloc_on">Zobraziť polohu kontaktu</string>
     <string name="preference_telocation_title">Poloha</string>
-    <string name="preferred_network_mode_cdma_evdo_gsm_wcdma_summary">Preferovaný režim siete: CDMA/EvDo/GSM/WCDMA</string>
+ <string name="preferred_network_mode_cdma_evdo_gsm_wcdma_summary">Preferovaný režim siete: CDMA/EvDo/GSM/WCDMA</string>
     <string name="preferred_network_mode_cdma_evdo_summary">Preferovaný režim siete: CDMA / EvDo</string>
-    <string name="preferred_network_mode_cdma_only_summary">Preferovaný režim siete: CDMA only</string>
+    <string name="preferred_network_mode_cdma_only_summary">Preferovaný režim siete: iba CDMA</string>
     <string name="preferred_network_mode_cdma_summary">Preferovaný režim siete: CDMA</string>
-    <string name="preferred_network_mode_dialogtitle">Preferovaný režim siete</string>
-    <string name="preferred_network_mode_evdo_only_summary">Preferovaný režim siete: EvDo only</string>
-    <string name="preferred_network_mode_global_summary">Preferovaný režim siete: Global(CDMA/EVDO/LTE/GSM/WCDMA)</string>
-    <string name="preferred_network_mode_gsm_only_summary">Preferovaný režim siete: GSM only</string>
+    <string name="preferred_network_mode_dialogtitle">Preferovaný typ siete</string>
+    <string name="preferred_network_mode_evdo_only_summary">Preferovaný režim siete: iba EvDo</string>
+    <string name="preferred_network_mode_global_summary">Preferovaný režim siete: globálny</string>
+    <string name="preferred_network_mode_gsm_only_summary">Preferovaný režim siete: iba GSM</string>
     <string name="preferred_network_mode_gsm_wcdma_summary">Preferovaný režim siete: GSM / WCDMA</string>
+    <string name="preferred_network_mode_lte_cdma_evdo_gsm_wcdma_summary">Preferovaný režim siete: LTE/CDMA/EvDo/GSM/WCDMA</string>
     <string name="preferred_network_mode_lte_cdma_evdo_summary">Preferovaný režim siete: CDMA+LTE/EVDO</string>
     <string name="preferred_network_mode_lte_cdma_summary">Preferovaný režim siete: LTE / CDMA</string>
-    <string name="preferred_network_mode_lte_gsm_umts_summary">Uprednostňovaný režim siete: LTE / GSM / UMTS</string>
+    <string name="preferred_network_mode_lte_gsm_umts_summary">Preferovaný režim siete: LTE / GSM / UMTS</string>
     <string name="preferred_network_mode_lte_gsm_wcdma_summary">Preferovaný režim siete: GSM/WCDMA/LTE</string>
     <string name="preferred_network_mode_lte_summary">Preferovaný režim siete: LTE</string>
+    <string name="preferred_network_mode_lte_tdscdma_cdma_evdo_gsm_wcdma_summary">Preferovaný režim siete: LTE/TDSCDMA/CDMA/EvDo/GSM/WCDMA</string>
+    <string name="preferred_network_mode_lte_tdscdma_gsm_summary">Preferovaný režim siete: LTE/GSM/TDSCDMA</string>
+    <string name="preferred_network_mode_lte_tdscdma_gsm_wcdma_summary">Preferovaný režim siete: LTE/TDSCDMA/GSM/WCDMA</string>
+    <string name="preferred_network_mode_lte_tdscdma_summary">Preferovaný režim siete: LTE / TDSCDMA</string>
+    <string name="preferred_network_mode_lte_tdscdma_wcdma_summary">Preferovaný režim siete: LTE/TDSCDMA/WCDMA</string>
     <string name="preferred_network_mode_lte_wcdma_summary">Preferovaný režim siete: LTE / WCDMA</string>
-    <string name="preferred_network_mode_summary">Zmení sieťový operačný režim</string>
-    <string name="preferred_network_mode_td_scdma_cdma_evdo_gsm_wcdma_summary">Preferovaný režim siete: TD-SCDMA/CDMA/EvDo/GSM/WCDMA</string>
-    <string name="preferred_network_mode_td_scdma_gsm_lte_summary">Preferovaný režim siete: TD-SCDMA/GSM/LTE</string>
-    <string name="preferred_network_mode_td_scdma_gsm_summary">Preferovaný režim siete: TD-SCDMA / GSM</string>
-    <string name="preferred_network_mode_td_scdma_gsm_wcdma_lte_summary">Preferovaný režim siete: TD-SCDMA/GSM/WCDMA/LTE</string>
-    <string name="preferred_network_mode_td_scdma_gsm_wcdma_summary">Preferovaný režim siete: TD-SCDMA/GSM/WCDMA</string>
-    <string name="preferred_network_mode_td_scdma_lte_cdma_evdo_gsm_wcdma_summary">Preferovaný režim siete: TD-SCDMA/LTE/CDMA/EvDo/GSM/WCDMA</string>
-    <string name="preferred_network_mode_td_scdma_lte_summary">Preferovaný režim siete: TD-SCDMA / LTE</string>
-    <string name="preferred_network_mode_td_scdma_only_summary">Preferovaný režim siete: TD-SCDMA only</string>
-    <string name="preferred_network_mode_td_scdma_wcdma_lte_summary">Preferovaný režim siete: TD-SCDMA/WCDMA/LTE</string>
-    <string name="preferred_network_mode_td_scdma_wcdma_summary">Preferovaný režim siete: TD-SCDMA / WCDMA</string>
+    <string name="preferred_network_mode_nr_lte_cdma_evdo_gsm_wcdma_summary">Preferovaný režim siete: NR/LTE/CDMA/EvDo/GSM/WCDMA</string>
+    <string name="preferred_network_mode_nr_lte_cdma_evdo_summary">Preferovaný režim siete: NR/LTE/CDMA/EvDo</string>
+    <string name="preferred_network_mode_nr_lte_gsm_wcdma_summary">Preferovaný režim siete: NR/LTE/GSM/WCDMA</string>
+    <string name="preferred_network_mode_nr_lte_summary">Preferovaný režim siete: NR / LTE</string>
+    <string name="preferred_network_mode_nr_lte_tdscdma_cdma_evdo_gsm_wcdma_summary">Preferovaný režim siete: NR/LTE/TDSCDMA/CDMA/EvDo/GSM/WCDMA</string>
+    <string name="preferred_network_mode_nr_lte_tdscdma_gsm_summary">Preferovaný režim siete: NR/LTE/TDSCDMA/GSM</string>
+    <string name="preferred_network_mode_nr_lte_tdscdma_gsm_wcdma_summary">Preferovaný režim siete: NR/LTE/TDSCDMA/GSM/WCDMA</string>
+    <string name="preferred_network_mode_nr_lte_tdscdma_summary">Preferovaný režim siete: NR/LTE/TDSCDMA</string>
+    <string name="preferred_network_mode_nr_lte_tdscdma_wcdma_summary">Preferovaný režim siete: NR/LTE/TDSCDMA/WCDMA</string>
+    <string name="preferred_network_mode_nr_lte_wcdma_summary">Preferovaný režim siete: NR/LTE/WCDMA</string>
+    <string name="preferred_network_mode_nr_only_summary">Preferovaný režim siete: iba NR</string>
+    <string name="preferred_network_mode_summary">Zmena prevádzkového režimu siete</string>
+    <string name="preferred_network_mode_tdscdma_cdma_evdo_gsm_wcdma_summary">Preferovaný režim siete: TDSCDMA/CDMA/EvDo/GSM/WCDMA</string>
+    <string name="preferred_network_mode_tdscdma_gsm_summary">Preferovaný režim siete: TDSCDMA / GSM</string>
+    <string name="preferred_network_mode_tdscdma_gsm_wcdma_summary">Preferovaný režim siete: TDSCDMA/GSM/WCDMA</string>
     <string name="preferred_network_mode_tdscdma_summary">Preferovaný režim siete: TDSCDMA</string>
-    <string name="preferred_network_mode_title">Režim siete</string>
-    <string name="preferred_network_mode_wcdma_only_summary">Preferovaný režim siete: len WCDMA</string>
-    <string name="preferred_network_mode_wcdma_perf_summary">Preferovaný režim siete: preferovať WCDMA</string>
-    <string name="preferred_network_restrict_network_changed_incall">Počas hovoru nie je možné zmeniť sieť</string>
-    <string name="preferred_network_type_3g_only_warning">"Vybrali ste možnosť Len 3G! pokiaľ vaša karta SIM nepodporuje 3G, nebudete mať signál! Potvrďte kliknutím na OK."</string>
+    <string name="preferred_network_mode_tdscdma_wcdma_summary">Preferovaný režim siete: TDSCDMA / WCDMA</string>
+    <string name="preferred_network_mode_title">Preferovaný typ siete</string>
+    <string name="preferred_network_mode_wcdma_only_summary">Preferovaný režim siete: iba WCDMA</string>
+    <string name="preferred_network_mode_wcdma_perf_summary">Preferovaný režim siete: preferované WCDMA</string>
+<string name="preferred_network_restrict_network_changed_incall">"Počas hovoru nie je možné zmeniť mobilnú sieť"</string>
+    <string name="preferred_network_type_3g_only_warning">Vaša SIM karta musí podporovať 3G, aby ste sa mohli pripojiť k sieti.</string>
     <string name="preferred_network_type_cdma">CDMA</string>
-    <string name="preferred_network_type_pref_entries_3g_preferred">Preferovať 3G siete</string>
-    <string name="preferred_network_type_pref_entries_3g_preferred_cdma">Preferovať 3G(CDMA) siete</string>
-    <string name="preferred_network_type_pref_entries_3g_preferred_mx_at">3G/2G (3G Preferované)</string>
-    <string name="preferred_network_type_pref_entries_4g_preferred">Preferovať 4G siete</string>
-    <string name="preferred_network_type_pref_entries_4g_preferred_cdma">Preferovať 4G (CDMA) siete</string>
-    <string name="preferred_network_type_pref_entries_4g_preferred_mx_at">4G/3G/2G (4G Preferované)</string>
-    <string name="preferred_network_type_pref_entries_5g_preferred">Preferovať 5G siete</string>
-    <string name="preferred_network_type_pref_entries_5g_preferred_mx_at">5G/4G/3G/2G (5G/4G Preferované)</string>
+    <string name="preferred_network_type_pref_entries_3g_non_preferred_mx_at">3G/2G</string>
+    <string name="preferred_network_type_pref_entries_3g_preferred">Preferované 3G</string>
+    <string name="preferred_network_type_pref_entries_3g_preferred_cdma">Preferované 3G (CDMA)</string>
+    <string name="preferred_network_type_pref_entries_3g_preferred_jp_sb">3G/GSM</string>
+    <string name="preferred_network_type_pref_entries_3g_preferred_lm_cr">WCDMA/GSM auto</string>
+    <string name="preferred_network_type_pref_entries_3g_preferred_mx_at">3G/2G (preferované 3G)</string>
+    <string name="preferred_network_type_pref_entries_4g_non_preferred_mx_at">4G/3G/2G</string>
+    <string name="preferred_network_type_pref_entries_4g_preferred">Preferované LTE</string>
+    <string name="preferred_network_type_pref_entries_4g_preferred_cdma">Preferované 4G (CDMA)</string>
+    <string name="preferred_network_type_pref_entries_4g_preferred_custom">Preferované 4G</string>
+    <string name="preferred_network_type_pref_entries_4g_preferred_jp_sb">4G/3G/GSM</string>
+    <string name="preferred_network_type_pref_entries_4g_preferred_lm_cr">LTE/WCDMA/GSM auto</string>
+    <string name="preferred_network_type_pref_entries_4g_preferred_mx_at">4G/3G/2G (automaticky)</string>
+    <string name="preferred_network_type_pref_entries_4g_preferred_uk_ee">Automaticky 4G/3G/2G</string>
+    <string name="preferred_network_type_pref_entries_4g_preferred_vd">Automaticky 4G/3G/2G</string>
+    <string name="preferred_network_type_pref_entries_4g_preferred_za_mt">Automaticky 2G/3G/4G</string>
+    <string name="preferred_network_type_pref_entries_4g_preferred_za_mtn">Automaticky 2G/3G/4G</string>
+    <string name="preferred_network_type_pref_entries_5g_preferred">Preferované 5G</string>
+    <string name="preferred_network_type_pref_entries_5g_preferred_jp_sb">5G/4G/3G/GSM</string>
+    <string name="preferred_network_type_pref_entries_5g_preferred_lm_cr">5G/LTE/WCDMA/GSM auto</string>
+    <string name="preferred_network_type_pref_entries_5g_preferred_mx_at">5G/4G/3G/2G (automaticky)</string>
+    <string name="preferred_network_type_pref_entries_5g_preferred_uk_ee">Automaticky 5G/4G/3G/2G</string>
+    <string name="preferred_network_type_pref_entries_5g_preferred_vd">Automaticky 5G/4G/3G/2G</string>
+    <string name="preferred_network_type_pref_entries_5g_preferred_za_mt">Automaticky 2G/3G/4G/5G</string>
+    <string name="preferred_network_type_pref_entries_5g_preferred_za_mtn">Automaticky 2G/3G/4G/5G</string>
     <string name="preferred_network_type_pref_entries_auto">Automaticky</string>
     <string name="preferred_network_type_pref_entries_global">Globálne</string>
-    <string name="preferred_network_type_pref_entries_only_2g">Len 2G (šetrí batériu)</string>
+    <string name="preferred_network_type_pref_entries_only_2g">Len 2G</string>
+    <string name="preferred_network_type_pref_entries_only_2g_jp_sb">GSM</string>
+    <string name="preferred_network_type_pref_entries_only_2g_lm_cr">Len GSM</string>
     <string name="preferred_network_type_pref_entries_only_3g">Len 3G</string>
-    <string name="preferred_network_type_pref_entries_only_4g">Iba LTE</string>
+    <string name="preferred_network_type_pref_entries_only_3g_lm_cr">Len WCDMA</string>
+    <string name="preferred_network_type_pref_entries_only_4g">Len LTE</string>
     <string name="preferred_network_type_td_scdma">GSM/TD-SCDMA</string>
-    <string name="preferred_network_type_title">Voľba typu siete</string>
-    <string name="preferred_phone_account">Preferovaný účet</string>
-    <string name="preferred_wificall_roaming_title">Nastavenie Roamingu</string>
-    <string name="preferred_wificall_title">Nastavenie siete</string>
+    <string name="preferred_network_type_title">Preferovaný typ siete</string>
+    <string name="preferred_phone_account">Preferovaný účet na volanie</string>
+    <string name="preferred_wificall_title">Predvoľby siete</string>
     <string name="primary_account_summary_with">Primárny účet. %s</string>
     <string name="privacy_policy_title">Ochrana súkromia</string>
     <string name="privacy_setting">Súkromie</string>
