--- a/Slovak/main/Contacts.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Contacts.apk/res/values-sk/strings.xml
@@ -1528,4 +1528,10 @@ Zvoľte jednu z nasledujúcich možností:</string>
     <string name="yellowpage_user_profile">Profil</string>
     <string name="yesterday">Včera</string>
     <string name="zero_items_selected">Nič nie je vybrané</string>
+	
+    <string name="notification_missedCallTitle">Zmeškaný hovor</string>
+    <string name="notification_missedCall_call_back">Zavolať späť</string>
+    <string name="notification_missedCall_message">Odoslať SMS</string>
+    <string name="notification_missedCallsTitle">Zmeškané hovory</string>
+	
 </resources>
