--- a/Slovak/main/Settings.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Settings.apk/res/values-sk/strings.xml
@@ -7735,8 +7735,8 @@ Nastavenie telefónu môže vyžadovať prenos významného množstva dát."</st
         
 <string name="accept_new_connection">Povoliť nové pripojenia</string>
      <string name="accept_new_connection_detail">Nové pripojenia bluetooth boli z ovládacieho centra vypnuté</string>
-     <string name="bt_always_show_icon">Vždy zobrazovať ikonu bluetooth v stavovom riadku</string>  
-
+<string name="bt_always_show_icon">Nezobrazovať ikonu Bluetooth v lište</string>
+     <string name="bt_always_show_icon_summary">Zobraziť ikonu Bluetooth iba v roletke a ovládačoch</string>
 <string name="emulate_sd_data">Emulované dáta karty SD</string>	 
 
     <string name="var_font_switch_dialog_summary">Pre použitie týchto zmien, je nutné reštartovať vaše zariadenie.</string>
